feat: update Reddit API integration and migrate to Jackson 3

--- a/telegram-forwarder-bot/src/main/resources/templates/shutdown.html
+++ b/telegram-forwarder-bot/src/main/resources/templates/shutdown.html
@@ -1,1 +1,1 @@
-⚠️ <b xmlns:th="http://www.thymeleaf.org" th:text="${@telegramForwarderBot.me.firstName}"/> is shut down now!
+⚠️ <b xmlns:th="http://www.thymeleaf.org" th:text="${bot.name}"/> is shut down now!
