--- a/telegram-forwarder-bot/src/main/resources/templates/shuttingdown.html
+++ b/telegram-forwarder-bot/src/main/resources/templates/shuttingdown.html
@@ -1,1 +1,1 @@
-ℹ️ <b xmlns:th="http://www.thymeleaf.org" th:text="${@telegramForwarderBot.me.firstName}"/> is shutting down now!
+ℹ️ <b xmlns:th="http://www.thymeleaf.org" th:text="${bot.name}"/> is shutting down now!
